unpackaged/main/default/objects/litify__lu_Litify_Log__c/litify__lu_Litify_Log__c.object-meta.xml
<CustomObject>
    <description>Stores product logs.</description>
    <label>Litify Log</label>
    <nameField>
        <displayFormat>LOG-{YY}{MM}{DD}{0000}</displayFormat>
        <label>Litify Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litify Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>