unpackaged/main/default/objects/litify__lu_Litify_Log__c/fields/litify__lu_Log_Details__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Log_Details__c</fullName>
    <label>Log Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>