unpackaged/main/default/objects/litify__lu_Litify_Log__c/fields/litify__lu_Product__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Litify 1st-Gen</fullName>
            </value>
            <value>
                <fullName>Docrio</fullName>
            </value>
            <value>
                <fullName>Timekeeping</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Plans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>