unpackaged/main/default/objects/litify__lu_Litify_Log__c/fields/litify__lu_Running_User__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Running_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>lu_Litify_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>