unpackaged/main/default/objects/litify__lu_Litify_Log__c/fields/litify__lu_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>